读取秒针监测模板，部署UP监测代码
1、完成可以读取秒针监测代码生成批量上传文件
2、每个html部署了ttd的universal pixel监测代码

--- a/templates/CreativeSetting.html
+++ b/templates/CreativeSetting.html
@@ -7,6 +7,8 @@
 <!--    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">-->
     <script src="{{ url_for('static', filename='28adb9f300.js') }}" crossorigin="anonymous"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://js.adsrvr.org/up_loader.1.1.0.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ttd_universal_pixel.js') }}"></script>
     <script type="text/javascript" >
     var Adgroup_list =[];
 <!--        function setRATrackURL()-->
@@ -140,7 +142,7 @@
                 <table  style="width:40%">
                     <tr>
                         <td style="padding: 10px 0 10px">Name:&nbsp
-                            <span class="mytooltip tooltip-effect-1">
+                            <span class="mytooltip tooltip-effect-1"  style="z-index:-1">
                             <span class="tooltip-item"><i class="fa-solid fa-circle-question"></i></span>
                             <span class="tooltip-content clearfix">
                             <img src="static/tooltipName.png">
