--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="static/styles.css">
     <!--    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">-->
     <script src="{{ url_for('static', filename='28adb9f300.js') }}" crossorigin="anonymous"></script>
+    <script src="https://js.adsrvr.org/up_loader.1.1.0.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ttd_universal_pixel.js') }}"></script>
 </head>
 <body>
 <!--<table>-->
