--- a/templates/CampaignName.html
+++ b/templates/CampaignName.html
@@ -5,6 +5,8 @@
     <title>CampaignNameSetting</title>
     <link rel="stylesheet" href="static/styles.css">
     <script src="{{ url_for('static', filename='28adb9f300.js') }}" crossorigin="anonymous"></script>
+    <script src="https://js.adsrvr.org/up_loader.1.1.0.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ttd_universal_pixel.js') }}"></script>
 </head>
 <body>
 
