--- a/templates/download.html
+++ b/templates/download.html
@@ -5,6 +5,8 @@
     <title>Forecasting List From Solimar</title>
     <link rel="stylesheet" type="text/css" href= "{{ url_for('static', filename ='css/style.css') }}">
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://js.adsrvr.org/up_loader.1.1.0.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ttd_universal_pixel.js') }}"></script>
 </head>
 <body>
 <a href="{{ url_for('export', filename=filename) }}">Download the result file</a>
