--- a/templates/init creative name.html
+++ b/templates/init creative name.html
@@ -5,6 +5,8 @@
     <title>init creative name</title>
     <link rel="stylesheet" href="static/styles.css">
     <script src="{{ url_for('static', filename='28adb9f300.js') }}" crossorigin="anonymous"></script>
+    <script src="https://js.adsrvr.org/up_loader.1.1.0.js" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='ttd_universal_pixel.js') }}"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
         function check_switch( id ){
