--- a/templates/creative_upload.html
+++ b/templates/creative_upload.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form method="post" action="/fileUpload" enctype="multipart/form-data">
-        <input type="file" id="myFile" name="files" multiple="multiple" onchange="updateList()" accept="image/*">
+        <input type="file" id="myFile" name="files" multiple="multiple" onchange="updateList()" accept="image/*,video/*,audio/*">
         <br></br>
 
         <div id="fileList" style="display:none" >
